Fix for notebookbar-shortcuts-bar vertical alignment
Removes additional vertical padding that was conflicting with overall
vertical alignment (specially affecting hamburger icon but also save...)

--- a/browser/css/notebookbar.css
+++ b/browser/css/notebookbar.css
@@ -125,6 +125,10 @@
 	flex-direction: column;
 }
 
+.notebookbar-shortcuts-bar .cell.notebookbar {
+	padding: 0 2px;
+}
+
 #Save.savemodified:after {
 	content: '';
 	display: block;
